Bug#34303 Client using NDBAPI crashes if client application uses many connections  - Add portability wrapper class ndb_socket_poller for 'poll' and 'select'    with special dynamic fd_set support for Windows.  - Add new 'ndb_poll' function for waiting on events on one socket.  - Use the 'ndb_poll' function everywhere waiting on one socket.  - Change from "struct timeval" to "int timeout_millisec" as parameter    to sendIsPossible, no need to convert back and forth    when 'ndb_poll' accepts timeout in milliseconds.  - Add new member variable to TCP_Transporter for remembering    which index in the poll ist each transporter is using.  - Backport the remove of 'select' before disconnect of faulty connection    from 7.0  - Remove the windows specific "sleep if no fds for select", since that is    now done in ndb_socket_poller  - Backport patch from 7.0 which makes the SocketServer::doAccept loop    sleep if there is a failure returned from 'accept', otherwise    100% CPU was used.