storage/ndb/src/common/util/SocketClient.cpp
@@ -18,18 +18,17 @@
 
 
 #include <ndb_global.h>
-#include <NdbOut.hpp>
 
 #include <SocketClient.hpp>
 #include <SocketAuthenticator.hpp>
 
-SocketClient::SocketClient(const char *server_name, unsigned short port, SocketAuthenticator *sa)
+SocketClient::SocketClient(const char *server_name, unsigned short port, SocketAuthenticator *sa) :
+  m_connect_timeout_millisec(0) // Blocking connect by default
 {
   m_auth= sa;
   m_port= port;
   m_server_name= server_name ? strdup(server_name) : 0;
   m_sockfd= NDB_INVALID_SOCKET;
-  m_connect_timeout_sec= 0;
 }
 
 SocketClient::~SocketClient()
@@ -108,19 +107,10 @@ SocketClient::bind(const char* bindaddress, unsigned short localport)
 NDB_SOCKET_TYPE
 SocketClient::connect(const char *toaddress, unsigned short toport)
 {
-  fd_set rset, wset;
-  struct timeval tval;
-  int r;
-  bool use_timeout;
-  SOCKOPT_OPTLEN_TYPE len;
-  int flags;
-
-  if (m_sockfd == NDB_INVALID_SOCKET)
+  if (!my_socket_valid(m_sockfd))
   {
-    if (!init()) {
-#ifdef VM_TRACE
-      ndbout << "SocketClient::connect() failed " << m_server_name << " " << m_port << endl;
-#endif
+    if (!init())
+    {
       return NDB_INVALID_SOCKET;
     }
   }
@@ -139,52 +129,53 @@ SocketClient::connect(const char *toaddress, unsigned short toport)
       return NDB_INVALID_SOCKET;
   }
 
-  flags= fcntl(m_sockfd, F_GETFL, 0);
+  // Set socket non blocking
+  const int flags= fcntl(m_sockfd, F_GETFL, 0);
   fcntl(m_sockfd, F_SETFL, flags | O_NONBLOCK);
 
-  r= ::connect(m_sockfd, (struct sockaddr*) &m_servaddr, sizeof(m_servaddr));
-
+  // Start non blocking connect
+  int r = ::connect(m_sockfd,
+		    (struct sockaddr*) &m_servaddr, sizeof(m_servaddr));
   if (r == 0)
     goto done; // connected immediately.
 
   if (r < 0 && (errno != EINPROGRESS)) {
+    // Start of non blocking connect failed
     NDB_CLOSE_SOCKET(m_sockfd);
     m_sockfd= NDB_INVALID_SOCKET;
     return NDB_INVALID_SOCKET;
   }
 
-  FD_ZERO(&rset);
-  FD_SET(m_sockfd, &rset);
-  wset= rset;
-  tval.tv_sec= m_connect_timeout_sec;
-  tval.tv_usec= 0;
-  use_timeout= m_connect_timeout_sec;
-
-  if ((r= select(m_sockfd+1, &rset, &wset, NULL,
-                 use_timeout? &tval : NULL)) == 0)
+  if (ndb_poll(m_sockfd, true, true, true,
+               m_connect_timeout_millisec > 0 ?
+               m_connect_timeout_millisec : -1) <= 0)
   {
+    // Nothing has happened on the socket after timeout
+    // or an error occured
     NDB_CLOSE_SOCKET(m_sockfd);
     m_sockfd= NDB_INVALID_SOCKET;
     return NDB_INVALID_SOCKET;
   }
 
-  if (FD_ISSET(m_sockfd, &rset) || FD_ISSET(m_sockfd, &wset))
+  // Activity detected on the socket
+
   {
-    len= sizeof(r);
-    if (getsockopt(m_sockfd, SOL_SOCKET, SO_ERROR, &r, &len) < 0 || r)
+    // Check socket level error code
+    int so_error = 0;
+    SOCKOPT_OPTLEN_TYPE len= sizeof(so_error);
+    if (getsockopt(m_sockfd, SOL_SOCKET, SO_ERROR, &so_error, &len) < 0)
     {
-      // Solaris got an error... different than others
       NDB_CLOSE_SOCKET(m_sockfd);
       m_sockfd= NDB_INVALID_SOCKET;
       return NDB_INVALID_SOCKET;
     }
-  }
-  else
-  {
-    // select error, probably m_sockfd not set.
-    NDB_CLOSE_SOCKET(m_sockfd);
-    m_sockfd= NDB_INVALID_SOCKET;
-    return NDB_INVALID_SOCKET;
+
+    if (so_error)
+    {
+      NDB_CLOSE_SOCKET(m_sockfd);
+      m_sockfd= NDB_INVALID_SOCKET;
+      return NDB_INVALID_SOCKET;
+    }
   }
 
 done:
